Now It's Done 😋

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1 class="head">NOTES OF ECONOMICS</h1>
   </div>
 
-  
+
   <section>
     <div class="qs1to4 flex util">
       <p>
@@ -177,7 +177,7 @@
 
     <div class="qs11 flex util">
       <p>
-        <span> 11)</span>
+        <span> Q 11)</span>
         <a target="_blank"
           href="https://articles.bplans.com/financial-ratios-explained/#:~:text=The%20financial%20leverage%20ratio%20is%20used%20to%20measure,financial%20risk.%20Financial%20leverage%20%3D%20operating%20income%2Fnet%20income">
           How your financial position gets affected by the financial ratios, and discuss about the various financial
